WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314565
visionOS WebKit crashes when initiating spatial mode after playing a video
https://bugs.webkit.org/show_bug.cgi?id=314565
Summary
visionOS WebKit crashes when initiating spatial mode after playing a video
Phipson Lee
Reported
2026-05-11 10:33:43 PDT
rdar://176306149
Attachments
Add attachment
proposed patch, testcase, etc.
Phipson Lee
Comment 1
2026-05-11 10:39:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64687
EWS
Comment 2
2026-05-11 14:57:51 PDT
Committed
313032@main
(30678a95c751): <
https://commits.webkit.org/313032@main
> Reviewed commits have been landed. Closing PR #64687 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug