visionOS WebKit crashes when initiating spatial mode after playing a video https://bugs.webkit.org/show_bug.cgi?id=314565 rdar://176306149

Reviewed by Abrar Rahman Protyasha.

This PR fixes an issue introduced in 312437@main where visionOS Safari
kept a reference to the liveSnapshotView during live window resize to
update its size during resize. This triggers a crash during spatial browsing
due to that the web view can get deallocated after _endLiveResize runs but
before the async cleanup callback fires. The fix is to guard that reference
if self is already removed.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _endLiveResize]):

Canonical link: https://commits.webkit.org/313032@main